--- a/YaMdEditor/YaMdEditor.csproj
+++ b/YaMdEditor/YaMdEditor.csproj
@@ -84,6 +84,12 @@
     <Compile Include="FrmMdEditor.Designer.cs">
       <DependentUpon>FrmMdEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmOption.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmOption.Designer.cs">
+      <DependentUpon>FrmOption.cs</DependentUpon>
+    </Compile>
     <Compile Include="HtmlHeader.cs" />
     <Compile Include="InputBox.cs" />
     <Compile Include="MarkdownParser\MarkdownDeep\Abbreviation.cs" />
@@ -132,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMdEditor.zh.resx">
       <DependentUpon>FrmMdEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmOption.resx">
+      <DependentUpon>FrmOption.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
